--- a/HW-WebApp-2022-2023/groupdata.tex
+++ b/HW-WebApp-2022-2023/groupdata.tex
@@ -1,13 +1,17 @@
 \centering
 \begin{longtable}{|p{.3\columnwidth}|p{.3\columnwidth} |p{.3\columnwidth}|} 
 \hline
- \makecell{\textbf{Group Acronym}} & \multicolumn{2}{c|}{\makecell{ACME}} \\ \hline
+ \makecell{\textbf{Group Acronym}} & \multicolumn{2}{c|}{\makecell{damacaNaN}} \\ \hline
  \makecell{\textbf{Last Name}} & \makecell{\textbf{First Name}} & \makecell{\textbf{Badge Number}} \\
  \hline
- \makecell{Doe} & \makecell{Jane} & \makecell{123456} \\\hline
- \makecell{Doe} & \makecell{John} & \makecell{123456} \\\hline
- \makecell{Doe} & \makecell{Jane} & \makecell{123456} \\\hline
- \makecell{Doe} & \makecell{John} & \makecell{123456} \\\hline
- \makecell{Doe} & \makecell{Jane} & \makecell{123456} \\\hline
- \makecell{Doe} & \makecell{John} & \makecell{123456} \\\hline
+ \makecell{Aksoy} & \makecell{Adnan Kerem} & \makecell{2081392} \\\hline
+ \makecell{Atabek} & \makecell{Isil} & \makecell{123456} \\\hline
+ \makecell{Kilic} & \makecell{Ayse} & \makecell{2071526} \\\hline
+ \makecell{Kose} & \makecell{Ismail Deha} & \makecell{2072544} \\\hline
+ \makecell{Ofluoglu} & \makecell{Merve} & \makecell{2073030} \\\hline
+ \makecell{Ozfirat} & \makecell{Anil} & \makecell{123456} \\\hline
+ \makecell{Ozturk} & \makecell{Samet Can} & \makecell{2087154} \\\hline
+ \makecell{Sanisoglu} & \makecell{Mehmet} & \makecell{123456} \\\hline
+ \makecell{Tabar} & \makecell{Omer Cem} & \makecell{2081169} \\\hline
+ \makecell{Yilmaz} & \makecell{Gorkem} & \makecell{123456} \\\hline
 \end{longtable}
