--- a/HW-WebApp-2022-2023/sections/Objectives.tex
+++ b/HW-WebApp-2022-2023/sections/Objectives.tex
@@ -3,4 +3,4 @@
 %What your system will be used for? Why is it important? What problems does it solve?
 
 
-test
+The objective of this project is developing a web application that can help new and existing students in the University of Padova. The project will ensure that the products that the students need or no longer need are exchanged or sale/buying only among the students. In this way, it is aimed to ensure a reliable and fast shopping and to prevent fraud and being deceived with defective products.
