Category Dao, Category Resource, Some Latex updates

--- a/HW-WebApp-2022-2023/sections/MainFunctionalities.tex
+++ b/HW-WebApp-2022-2023/sections/MainFunctionalities.tex
@@ -1,4 +1,40 @@
 \section{Main Functionalities}
 %What are the main functionalities of the web app? what services does it offer and how it is organized?
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+\hspace{5mm} XXXX is a web application that can only be used by students. Students will be able to register to the system with their "student e-mail addresses (.....@studenti.unipd.it)". This way, some of the user information will be visible, and a secure environment will be provided. In case of possible complaints, the user can be reported to the necessary authorities. This way, fraud can be prevented.
+
+After registering to the web application, users can list their products for sale (paid/free/barter) based on their needs, or they can search for the product they need among the listed items for sale. The pages of the products for sale contain their own descriptions, visuals, and tags. This way, the buyer will have an idea about the product they will purchase. After the purchase, the buyer can leave a review about the seller, and the seller can be introduced to other buyers through their reviews, and they can act accordingly.
+\\
+\\
+The website is divided in 2 main areas:
+    \begin{itemize}
+        \item Web application
+        \begin{itemize}
+            \item Register with student e-mail adress
+            \item Create the user
+            \item Provide logout mechanism for logged in users
+            \item Provide sign up and login page
+        \end{itemize}
+        \item User
+        \begin{itemize}
+            \item Update the user information
+            \item Add profile picture
+            \item Seller Area:
+            \begin{itemize}
+                \item Create product
+                \begin{itemize}
+                    \item Update the post
+                    \item Add title
+                    \item Add descriptions
+                    \item Add pictures
+                    \item Add tags
+                    \item Add category
+                \end{itemize}
+            \end{itemize}
+            \item Buyer Area:
+            \begin{itemize}
+                \item Search prouct
+                \item Seller review
+            \end{itemize}
+        \end{itemize}
+    \end{itemize}
