--- a/HW-WebApp-2022-2023/sections/Objectives.tex
+++ b/HW-WebApp-2022-2023/sections/Objectives.tex
@@ -3,4 +3,4 @@
 %What your system will be used for? Why is it important? What problems does it solve?
 
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+he objective of this project is developing a web application that can help new and existing students in the University of Padova. The project will ensure that the products that the students need or no longer need are exchanged or sale/buying only among the students. In this way, it is aimed to ensure a reliable and fast shopping and to prevent fraud and being deceived with defective products.
