Revert "commıt chnges"
This reverts commit d7fa5efe2f5d94485a00b6c0a07a48c0675a3478.

--- a/HW-WebApp-2022-2023/sections/BLL/ClassDiagram.tex
+++ b/HW-WebApp-2022-2023/sections/BLL/ClassDiagram.tex
@@ -1,6 +1,6 @@
 \subsection{Class Diagram}
 
-% \includegraphics[]{ClassDiagram.pdf}
+\includegraphics[]{ClassDiagram.pdf}
 
 %Describe here the class diagram of your project
 
