--- a/HW-WebApp-2022-2023/sections/DLL/ERSchema.tex
+++ b/HW-WebApp-2022-2023/sections/DLL/ERSchema.tex
@@ -1,6 +1,6 @@
 \subsection{Entity-Relationship Schema}
 
-% \includegraphics[]{ERSchema.pdf}
+\includegraphics[]{ERSchema.pdf}
 
 %Describe here your ER schema
 
