Favourites add and get JSP files are done

--- a/HW-WebApp-2022-2023/sections/BLL/ClassDiagram.tex
+++ b/HW-WebApp-2022-2023/sections/BLL/ClassDiagram.tex
@@ -1,6 +1,6 @@
 \subsection{Class Diagram}
 
-\includegraphics[]{ClassDiagram.pdf}
+\includegraphics[]{HW-WebApp-2022-2023/Images/Class_Diagram.png}
 
 %Describe here the class diagram of your project
 
