.Tex files updated

--- a/HW-WebApp-2022-2023/local_macros.tex
+++ b/HW-WebApp-2022-2023/local_macros.tex
@@ -7,7 +7,7 @@
 \usepackage{cmbright}
 \usepackage{array}
 \usepackage{makecell}
-
+\usepackage[export]{adjustbox}
 
 \definecolor{UnipdRed}{RGB}{155, 0, 20}
 
