--- a/HW-WebApp-2022-2023/sections/MainFunctionalities.tex
+++ b/HW-WebApp-2022-2023/sections/MainFunctionalities.tex
@@ -1,40 +1,41 @@
 \section{Main Functionalities}
 %What are the main functionalities of the web app? what services does it offer and how it is organized?
 
-\hspace{5mm} XXXX is a web application that can only be used by students. Students will be able to register to the system with their "student e-mail addresses (.....@studenti.unipd.it)". This way, some of the user information will be visible, and a secure environment will be provided. In case of possible complaints, the user can be reported to the necessary authorities. This way, fraud can be prevented.
+\hspace{5mm} DamacaNaN is a web application that can only be used by UniPD members. Members will be able to register to the system with their university e-mail addresses (@studenti.unipd.it, @unipd.it, alumni@unip.it). This way, some of the user information will be visible, and a secure environment will be provided for all members of the University of Padua. In case of possible complaints, the user can be reported to the necessary authorities. This way, fraudulence actions can be prevented.\newline
 
-After registering to the web application, users can list their products for sale (paid/free/barter) based on their needs, or they can search for the product they need among the listed items for sale. The pages of the products for sale contain their own descriptions, visuals, and tags. This way, the buyer will have an idea about the product they will purchase. After the purchase, the buyer can leave a review about the seller, and the seller can be introduced to other buyers through their reviews, and they can act accordingly.
+After registering to the web application, users can list their products for sale (paid/free/barter) based on their needs, or they can search for the product they need among the listed items for sale. The pages of the products for sale contain their own descriptions, visuals, and keywords. This way, the buyer will have an idea about the product they will purchase. After the purchase, the buyer can leave a review about the seller, and the seller can be introduced to other buyers through their reviews, and they can act accordingly.
 \\
 \\
-The website is divided in 2 main areas:
+The website is divided into 3 main areas:
     \begin{itemize}
-        \item Web application
+        \item \textbf{Publicly Visible Area : }Publicly visible area is the indication for the welcome page of our application that is accessible for both authorized and unathorized users. In this area, there are informations about the main logic behind our DamacaNaN marketplace and contributors. Additionaly users can access the marketplace by signing up and signing in.
+        \item \textbf{User Area: }Is an area that is accessible for normal user that have permissions to:
         \begin{itemize}
-            \item Register with student e-mail adress
-            \item Create the user
-            \item Provide logout mechanism for logged in users
-            \item Provide sign up and login page
+            \item Creating new posts in the marketplace
+            \item Updating their existed posts
+            \item Delete their posts
+            \item View posts of other users
+            \item Adding posts to their favorites
+            \item Searching for particular posts
+            \item Contacting sellers about details of their posts
+            \item Purchasing products from marketplace
+            \item Update their profile information
+            \item Viewing other user profiles
+            \item Rating users after the purchase operation
+            
         \end{itemize}
-        \item User
+        \item \textbf{Administrative Area:} Is an area that is accessible for an admin that have permissions to:
         \begin{itemize}
-            \item Update the user information
-            \item Add profile picture
-            \item Seller Area:
-            \begin{itemize}
-                \item Create product
-                \begin{itemize}
-                    \item Update the post
-                    \item Add title
-                    \item Add descriptions
-                    \item Add pictures
-                    \item Add tags
-                    \item Add category
-                \end{itemize}
-            \end{itemize}
-            \item Buyer Area:
-            \begin{itemize}
-                \item Search prouct
-                \item Seller review
-            \end{itemize}
+            \item Adding new categories to the system
+            \item Adding new subcategory under the desired category
+            \item Delete category and its corresponding subcategories
+            \item Delete subcategory from a category
+            \item Deleting unwanted posts
+            \item Deleting unwanted users
+            \item View all posts within the system
+            \item View all users within the system
+            \item View action logs of the overall system
+            \item View and delete unwanted reviews
         \end{itemize}
     \end{itemize}
+
