--- a/HW-WebApp-2022-2023/sections/Objectives.tex
+++ b/HW-WebApp-2022-2023/sections/Objectives.tex
@@ -1,6 +1,6 @@
-\section{Objectives}
+\section{Objectives}\\
 %Brief description of the overall objectives of your system.
 %What your system will be used for? Why is it important? What problems does it solve?
 
 
-he objective of this project is developing a web application that can help new and existing students in the University of Padova. The project will ensure that the products that the students need or no longer need are exchanged or sale/buying only among the students. In this way, it is aimed to ensure a reliable and fast shopping and to prevent fraud and being deceived with defective products.
+ \hspace{5mm}The objective of this project is to develop a web application that can help new and existing UniPD members of the University of Padova. The project will ensure that the products that the members need or no longer need are exchanged or sold/bought only among the UniPD members. In this way, it is aimed to ensure reliable and fast shopping, to prevent fraud and being deceived with defective products. 
