--- a/HW-WebApp-2022-2023/sections/Contributions.tex
+++ b/HW-WebApp-2022-2023/sections/Contributions.tex
@@ -3,11 +3,15 @@
 % For each group member, describe in detail the contribution to the project.
 
 \begin{description}
-	\item[Jane Doe] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	\item[John Doe] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	\item[Jane Doe] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	\item[John Doe] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	\item[Jane Doe] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	\item[John Doe] Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	\item[Adnan Kerem Aksoy] Test Engineer, Resource x1.5, DAO x7 ,Servlet x1, JSP x1, Entity Relationship Schema, Sequence Diagram, Report.
+	\item[Isil Atabek] Resource x0, DAO x1 ,Servlet x0, JSP x1.
+	\item[Ayse Kilic] Team Leader, Resource x1.5, DAO x7.5 ,Servlet x1, JSP x1
+	\item[Ismail Deha Kose] Test Engineer, Resource x1, DAO x5 ,Servlet x1, Report.
+ 	\item[Merve Ofluoglu] Project Manager, Database Population and Creation, Resource x1.5, DAO x16, sevlet x4, JSP x6
+	\item[Anil Ozfirat] Support Engineer, Resource x1 ,DAO x5 ,Servlet x1, JSP x1
+ 	\item[Samet Can Ozturk] Entity Relationship Schema, Sequence Diagram
+  	\item[Mehmet Sanisoglu] Resource x1, DAO x ,Servlet x1, JSP x1
+   	\item[Omer Cem Tabar] Scrum Master, Resource x2.5, Database Population and Creation, Resource x1, DAO x16, Servlet x3, JSP x5
+	\item[Gorkem Yilmaz] Resource x1,Servlet x1, JSP x1
 
 \end{description}
