HW-1 Report PDF Update

--- a/HW-WebApp-2022-2023/sections/Contributions.tex
+++ b/HW-WebApp-2022-2023/sections/Contributions.tex
@@ -9,7 +9,7 @@
 	\item[Ismail Deha Kose] Test Engineer, Resource x1, DAO x5 ,Servlet x1, Report.
  	\item[Merve Ofluoglu] Project Manager, Database Population and Creation, Resource x1.5, DAO x16, sevlet x4, JSP x6
 	\item[Anil Ozfirat] Support Engineer, Resource x1 ,DAO x5 ,Servlet x1, JSP x1
- 	\item[Samet Can Ozturk] Entity Relationship Schema, Sequence Diagram
+ 	\item[Samet Can Ozturk] JSP x2, Entity Relationship Schema, Sequence Diagram
   	\item[Mehmet Sanisoglu] Resource x1, DAO x ,Servlet x1, JSP x1
    	\item[Omer Cem Tabar] Scrum Master, Resource x2.5, Database Population and Creation, Resource x1, DAO x16, Servlet x3, JSP x5
 	\item[Gorkem Yilmaz] Resource x1,Servlet x1, JSP x1
